# base-api

./: pyproject.toml
arch_test/: main.py
arch_test/api/v1/: router.py
arch_test/core/: errors_handlers.py
arch_test/core/dependencies/: repositories_dependencies.py  services_dependencies.py
arch_test/infra/db/repositories/: inmemory_user.py  inmemory_user_repository.py
arch_test/modules/auth/: dependencies.py  schemas.py  service.py
arch_test/modules/auth/routers/v1/: router.py
arch_test/modules/user/: dependencies.py  model.py  repository.py  router.py  schemas.py  service.py
arch_test/modules/user/routers/v1/: router.py
arch_test/shared/: response_schemas.py
base_api/: main.py
base_api/api/v1/: router.py
base_api/core/: configs.py  errors_handlers.py  exceptions.py
base_api/infra/db/repositories/: inmemory_user_repository.py
base_api/modules/auth/: dependencies.py  schemas.py  service.py
base_api/modules/auth/routers/v1/: router.py
base_api/modules/user/: dependencies.py  models.py  repository.py  schemas.py  service.py
base_api/modules/user/routers/v1/: router.py
base_api/shared/: response_schemas.py
tests/: conftest.py
tests/core/: test_configs.py  test_errors_handlers.py
tests/modules/auth/: test_dependencies.py  test_router.py  test_schema.py  test_service.py
